# SharePix

./: .gitignore  CLAUDE.md  Knot图片分享系统后端综合设计报告.md  分享方案.md  需求分析.md
.VSCodeCounter/2025-10-07_21-31-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-07_23-13-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-09_16-39-15/: details.md  diff-details.md  diff.csv  (+6 more)
backend-service/: .env.example  .gitignore  BUGFIX_SUMMARY.md  CMakeLists.txt  PATH_FIX_SUMMARY.md  README.md  analyze_upload_logs.sh  start-server.sh  test_follow_complete.sh  数据一致性问题修复完成报告.md  数据一致性问题修复验证报告.md
backend-service/.augment/rules/: rules.md
backend-service/config/: config.cloud.json  config.example.json  database.sql  migration_add_user_profile_fields.sql  migration_fix_images_schema.sql  migration_follows.sql  migration_shares.sql  migration_to_posts.sql  setup_remote_access.sql
backend-service/deploy-static/: CMakeLists.txt  README.md  build.sh
backend-service/deploy-static/well-known-reference/: README.md  apple-app-site-association  applinking.json  assetlinks.json
backend-service/docs/: .gitkeep  NETWORK-ACCESS.md  README.md  check-network-access.sh
backend-service/docs/api/: README.md  api-docs.html  docker-compose-swagger.yml  openapi.yaml  start-api-docs.sh
backend-service/project_document/: API_DOC_UPDATE.md  README.md  [000]API文档.md  [001]数据库设计文档.md  [001]项目架构文档.md  [002]项目架构文档.md  [003]环境安装配置教程.md  [006]九层架构详解-以创建帖子API为例.md  [100]阶段A-基础模块实现.md  [101]阶段B-1-用户认证模块.md  [101]阶段B-用户认证模块.md  [102]阶段C-图片管理模块.md  [105]阶段C-2-多图片帖子系统.md  [106]用户信息管理功能完善-实施计划.md  [106]阶段B-2-用户信息管理功能完善-实施计划.md  [107]用户信息更新接口BUG修复报告.md  [108]阶段D-2-互动系统关注功能实现计划.md  [109]阶段D-3-分享系统实现计划.md  [110]v2.4.0-图片URL自动前缀功能.md  [111]Deep Link配置使用教程-鸿蒙开发指南.md  [111]阶段D-4-图片静态文件服务实现方案.md  [112]JWT测试.md  [112]评论功能实现方案.md  [113]关注系统批量查询优化方案.md  [114]应用内分享功能完善技术文档.md  [116]JSON+Base64内存崩溃紧急修复报告.md  [117]分享系统后端实现总结.md  [118]Deep-Link配置参考-前端对接指南.md  [118]Feed流用户状态批量查询优化方案.md  [119]文件整理报告-2025-10-16.md  [120]开发测试环境Deep-Link使用指南.md  [151]多图片功能修复和实现报告.md  [158]Feed流性能优化报告.md  [161]关注功能测试问题汇总.md  [163]帖子接口用户ID逻辑化改造方案.md  [167]用户头像上传功能-实施方案.md  [169]头像上传功能内存泄漏问题分析报告.md  [170]收藏列表批量查询优化方案.md  [171]用户信息修改接口username昵称功能完善方案.md  [172]应用内分享功能测试问题汇总.md  (+2 more)
backend-service/project_document/backup_20251019_144638/: README.md  [000]API文档.md  [002]项目架构文档.md  [003]环境安装配置教程.md  [103]阶段C-1-图片管理模块第一次测试情况.md  [104]Apifox测试流程-BUG修复验证.md  [107]阶段D-1-互动系统点赞收藏功能实现计划.md  [110]阶段C-3-帖子图片静态文件服务修复方案.md  [111]Deep Link配置使用教程-鸿蒙开发指南.md  [112]Base64图片上传问题分析与解决方案.md  [113]全流程测试报告-帖子管理重点.md  [113]日志监控指南-图片上传排查手册.md  [115]创建帖子接口支持JSON+Base64格式-实施计划.md  [116]JSON+Base64内存崩溃紧急修复报告.md  [117]帖子接口用户ID逻辑化改造-实施报告.md  [119]帖子详情接口添加用户昵称字段-实施方案.md  [121]关注功能完整测试报告.md  [121]头像上传功能内存泄漏问题分析报告.md  [123]获取用户帖子接口问题修复方案.md  [201]性能优化专题.md  创建帖子请求流程文档.md  文档重新编号方案.md
backend-service/src/: main.cpp
backend-service/src/api/: auth_handler.cpp  auth_handler.h  base_handler.cpp  base_handler.h  comment_handler.cpp  comment_handler.h  favorite_handler.cpp  favorite_handler.h  follow_handler.cpp  follow_handler.h  image_handler.cpp  image_handler.h  like_handler.cpp  like_handler.h  post_handler.cpp  post_handler.h  share_handler.cpp  share_handler.h
backend-service/src/core/: auth_service.cpp  auth_service.h  comment_service.cpp  comment_service.h  favorite_service.cpp  favorite_service.h  follow_service.cpp  follow_service.h  image_service.cpp  image_service.h  like_service.cpp  like_service.h  post_service.cpp  post_service.h  share_service.cpp  share_service.h  user_service.cpp  user_service.h
backend-service/src/database/: comment_repository.cpp  comment_repository.h  connection_guard.cpp  connection_guard.h  connection_pool.cpp  connection_pool.h  favorite_repository.cpp  favorite_repository.h  follow_repository.cpp  follow_repository.h  image_repository.cpp  image_repository.h  like_repository.cpp  like_repository.h  mysql_statement.h  post_repository.cpp  post_repository.h  share_link_repository.cpp  share_link_repository.h  share_repository.cpp  share_repository.h  tag_repository.cpp  tag_repository.h  transaction_guard.h  transaction_manager.cpp  transaction_manager.h  user_repository.cpp  user_repository.h
backend-service/src/models/: comment.cpp  comment.h  favorite.cpp  favorite.h  follow.cpp  follow.h  image.cpp  image.h  like.cpp  like.h  post.cpp  post.h  share.cpp  share.h  share_link.cpp  share_link.h  tag.cpp  tag.h  user.cpp  user.h  user_stats.cpp  user_stats.h
backend-service/src/security/: jwt_manager.cpp  jwt_manager.h  password_hasher.cpp  password_hasher.h
backend-service/src/server/: http_server.cpp  http_server.h
backend-service/src/utils/: avatar_processor.cpp  avatar_processor.h  base62_encoder.cpp  base62_encoder.h  base64_decoder.cpp  base64_decoder.h  config_manager.cpp  config_manager.h  id_generator.cpp  id_generator.h  image_processor.cpp  image_processor.h  logger.cpp  logger.h  pagination_helper.h  url_helper.cpp  url_helper.h
backend-service/test/: CMakeLists.txt  DIAGNOSIS_RESULT.md  FAVORITE_400_DIAGNOSIS.md  TEST_RESULTS.md  compile_and_test_fix.sh  diagnose_follow_route.md  get_token.sh  multipart_tags_fix_explanation.md  test_comment_api.sh  test_concurrent.sh  test_data_consistency  test_data_consistency.cpp  test_delete.py  test_favorite_400.sh  test_favorite_content_type.sh  test_favorites_batch_query.sh  test_follow_post.sh  test_json_post_create.sh  test_large_image_base64.sh  test_memory_leak.sh  test_path_conversion  test_path_conversion.cpp  test_share_comprehensive.py  test_share_direct.sh  test_share_simple.sh  test_share_功能测试.sh  test_static_file_upload.sh  test_update_profile_fix.cpp  test_user_id_logical.sh  test_user_posts_fix.sh  test_user_repository.cpp  verify_fixes  verify_fixes.cpp  verify_logical_id.sh  修复总结_应用内分享功能.md  完整测试报告_应用内分享功能.md  数据一致性问题测试报告.md  测试报告_业务ID支持.md  测试报告_分享功能.md
backend-service/test/build_test/: comprehensive_diagnostic_test
(+49 files in other folders)
